@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-11-12 mmichaud <m.michael.michaud@orange.fr>
+  * Add z-interpolation to remodeler tool
+
 2017-11-12 Giuseppe Aruta. ExportLayerableEnvelopeAsGeometryPlugIn
   * Bug corrected. Added output of srid for Layer and RasterImageLayer
 
